# cortex-m-stm32f3disc-quickstart

./: .gitignore  Cargo.toml  Embed.toml  README.md  openocd.gdb
examples/: device.rs  exception.rs  hello.rs  serial.rs  serial_irq.rs  serial_irq_rb.rs
examples/rtic/: Cargo.toml  Embed.toml
examples/rtic/src/: main.rs
src/: main.rs
