[package]
authors = ["Brian Beattie<beattie@beattie-home.net>"]
edition = "2021"
readme = "README.md"
name = "stm32f3-rtic"
version = "0.1.0"

[workspace]

[dependencies.rtic]
version = "2.0.0"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "2.0.0"
features = ["cortex-m-systick"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[dependencies]
embedded-hal = "0.2.7"
panic-rtt-target = { version = "0.1.3" }
rtt-target = { version = "0.5.0" }

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc", "rt"]
version = "0.10.0"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f3-rtic"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
